--- a/style.css
+++ b/style.css
@@ -204,17 +204,14 @@ background-color: #e2e6e7;
 }
 
 .lit-box{
-    height: 320px;
-    display: flex;
-   justify-content: space-evenly;
-   flex-wrap: wrap;
+     display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
 }
 .lit-img{
-    height: 100px;
-    width: 140px;
-    background-size: cover;
-   margin-top: 0.5rem;
-   transition: .5s;
+   background-size: cover;
+    transition: .5s;
+    background-repeat: no-repeat;
 }
 .lit-img:hover{
     scale: 1.1;
